Update 11 Ejercicio ImprimirDom.html

--- a/Ejemplos/03 Objetos/11 Ejercicio ImprimirDom.html
+++ b/Ejemplos/03 Objetos/11 Ejercicio ImprimirDom.html
@@ -26,10 +26,20 @@
         let estructura = {
             text: "Esto es div 1",
             hijo1: { text: "Y este es el primer hijo del 1", hijo1: null, hijo2: null },
-            hijo2: { text: "YO el segundo, pero soy mejor, tengo un nieto", 
-            hijo1: { text: "Yo soy el nieto", hijo1: null, hijo2: null }, hijo2: null }
+            hijo2: {
+                text: "YO el segundo, pero soy mejor, tengo un nieto",
+                hijo1: { text: "Yo soy el nieto", hijo1: null, hijo2: null }, hijo2: null
+            }
         };
 
+        function impElem(elem) {
+            if (elem == null) return;
+            console.log(elem.text);
+            impElem(elem.hijo1);
+            impElem(elem.hijo2);
+        }
+
+        impElem(estructura);
     </script>
 </body>
 
