Update 11 Ejercicio ImprimirDom.html

--- a/Ejemplos/03 Objetos/11 Ejercicio ImprimirDom.html
+++ b/Ejemplos/03 Objetos/11 Ejercicio ImprimirDom.html
@@ -25,7 +25,7 @@
     <script>
         let estructura = {
             text: "Esto es div 1",
-            hijo1: { text: "Y este es el primer hijo del 1", hijo1: null, hijo2: null },
+            hijo1: { text: "Y este es el primer hijo del 1",hijo1: { text: "Yo soy el nieto", hijo1: null, hijo2: null }, hijo2: null },
             hijo2: {
                 text: "YO el segundo, pero soy mejor, tengo un nieto",
                 hijo1: { text: "Yo soy el nieto", hijo1: null, hijo2: null }, hijo2: null
@@ -36,7 +36,6 @@
             if (elem == null) return;
             console.log(elem.text);
             console.log(ind);
-
             impElem(elem.hijo1, ind+2);
             impElem(elem.hijo2, ind+2);
         }
