--- a/Ejemplos/03 Objetos/10 Desestructurando.html
+++ b/Ejemplos/03 Objetos/10 Desestructurando.html
@@ -10,18 +10,30 @@
 
 <body>
     <script>
-        
+
         let nombre = { nombre: "Esteban", edad: 23 };
         console.log(nombre);
 
         //Y si recibo un objeto pero sólo quiero trabajar con un elemento puedo hacer:
-         let { edad } = { nombre: "Esteban", edad: 23 };
+        let { edad } = { nombre: "Esteban", edad: 23 };
         console.log(edad);
         let { nombre2 } = { nombre2: "Esteban", edad: 23 };
         console.log(nombre2);
         //Ojo esto no funciona: Descoméntalo y ejecutalo a ver que pasa. Prueba, p.ej. a ponerle un let
-         //{ nombre3 } = { nombre3: "Esteban", edad: 23 };
-        console.log(nombre3)
+        //{ nombre3 } = { nombre3: "Esteban", edad: 23 };
+        //console.log(nombre3)
+        let string = JSON.stringify({
+            ardilla: false,
+            eventos: ["finde"]
+        });
+        console.log(string);
+        // → {"ardilla":false,"eventos":["finde"]}
+
+        console.log(JSON.parse(string).eventos);
+// → ["finde"]
+
+
+
     </script>
 </body>
 
