--- a/Trabajos Ignacio/Campeones.html
+++ b/Trabajos Ignacio/Campeones.html
@@ -9,7 +9,7 @@
     <script>
         const arr = [1, 2, 3, 4, 5, 6];
 
-        function combine (arr) {
+        const combine = (arr) => {
             return arr.reduce((acc, currentVal, currentIndex) => {
                 return acc.concat(
                     arr.slice(currentIndex + 1).map(val => [currentVal, val])
@@ -18,10 +18,6 @@
         };
 
         console.log(combine(arr));
-
-
-
-
     </script>
 </head>
 
