--- a/Trabajos Ignacio/Entregables/entregable1.html
+++ b/Trabajos Ignacio/Entregables/entregable1.html
@@ -80,23 +80,23 @@
         
 
         //Creacion de variables
-        let lista = {
-            nombre: "Marta",
-            nota: null,
-            sig: {
-                nombre: "Jorge",
-                nota: null,
-                sig: {
-                    nombre: "Aitor",
-                    nota: "null",
-                    sig: null
-                }
-            }
-        }
-        let arrayNombres = ["Marta", "Jorge", "Aitor"];
-
-        modifNota(lista, 2, 6)
-        console.log(personaN(lista, 2));
+        // let lista = {
+        //     nombre: "Marta",
+        //     nota: null,
+        //     sig: {
+        //         nombre: "Jorge",
+        //         nota: null,
+        //         sig: {
+        //             nombre: "Aitor",
+        //             nota: "null",
+        //             sig: null
+        //         }
+        //     }
+        // }
+        // let arrayNombres = ["Marta", "Jorge", "Aitor"];
+        
+        // modifNota(lista, 2, 6)
+        // console.log(personaN(lista, 2));
 
 
     </script>
