--- a/Trabajos Ignacio/EjerciciosClase.html
+++ b/Trabajos Ignacio/EjerciciosClase.html
@@ -73,7 +73,7 @@
         const D = ciudades.sort((a, v) => a.ApeAl < v.ApeAl);
         const E = ciudades.map(e => { return {} });
         const F = ciudades.reduce((a, v) => a + v.ciudad + ", ", "");
-        console.log(sortedArray);
+        console.log(A);
 
 
     </script>
