--- a/Trabajos Ignacio/Árbol.html
+++ b/Trabajos Ignacio/Árbol.html
@@ -1,30 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Árbol</title>
     <script>
-        let arbol = {
-            nombre: "",
-            añoNacim: 0,
-            sexo: "",
-            conyuge: "",
-            añoNacConyuge: 0,
-            hijos: []
-        }
-
-        let lista2 = {
-                nombre: "Javier",
-                añoNacim: 1923,
-                sexo: "Masculino",
-                conyuge: "Milagros",
-                añoNacConyuge: 1940,
-                hijos: []
-            }
-
-        const crearNodoPadre = (e => {
+        //Funcion que acepta como parámetro un nodo padre y te lo devuelv
+        function crearNodoPadre() {
             var padre = {
                 nombre: "Javier",
                 añoNacim: 1923,
@@ -34,18 +18,86 @@
                 hijos: []
             }
             return padre;
-        });
-        
-        const buscar = ((lista, nombre, año) => {
-            const A = lista.reduce((a, v) => 
-            e.nombre == nombre);
-            return A;
-        });
+        };
+
+        function buscar(lista, nombre) {
+            if (lista.nombre === nombre) {
+                return lista;
+            } else {
+                for (let i = 0; i < lista.hijos.length; i++) {
+                    const result = buscar(nombre, lista.hijos[i]);
+                    if (result) {
+                        return result;
+                    }
+                }
+                return null;
+            }
+        };
+
+        function buscarIndice(lista, nombre){
+            if (lista.nombre === nombre) {
+                return 0;
+            } else {
+                for (let i = 0; i < lista.hijos.length; i++) {
+                    const result = buscar(nombre, lista.hijos[i]);
+                    if (result) {
+                        return i;
+                    }
+                }
+                return null;
+            }
+        }
+
+        function añadirHijo(nodo) {
+            return nodo.hijos.push(crearNodoPadre());
+        };
+
+        function eliminarHijo(nodo) {
+            return nodo.hijos.splice(buscar());
+        };
+
+        function ListarArbol(lista) {
+
+        };
+
+        function convertirAJSON(nodo) {
+
+        };
+
+        function leerJSON(String) {
+
+        };
+
+        let padre = {
+            nombre: "Javier",
+            añoNacim: 1923,
+            sexo: "Masculino",
+            conyuge: "Milagros",
+            añoNacConyuge: 1940,
+            hijos: [
+                {
+                    nombre: "Pepe",
+                    añoNacim: 1923,
+                    sexo: "Masculino",
+                    conyuge: "Pepa",
+                    añoNacConyuge: 1940,
+                    hijos: []
+                }, 
+                "hola"
+            ]
+        }
         nombre2 = "Javier";
-        console.log(buscar(lista2, nombre2));
+        nombre3 = "Pepe";
+        //console.log(buscar(crearNodoPadre(), nombre2));
+        // console.log(añadirHijo(padre));
+        // añadirHijo(padre);
+        console.log(buscarIndice(padre, nombre2));
+
     </script>
 </head>
+
 <body>
-    
+
 </body>
+
 </html>
